--- a/new_method/index.css
+++ b/new_method/index.css
@@ -3,3 +3,22 @@ body {
   margin: 0;
   padding: 0;
 }
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-img {
+  width: 40px;
+}
+.nav-items {
+  list-style-type: none; /* Remove bullets */
+  display: flex;
+}
+.nav-items > li {
+  padding: 10px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+}
